xorg-server (2:1.9.99.903-1) UNRELEASED; urgency=low

  * New upstream release candidate (1.10 rc3).
  * Remove patch: 17-fix-ftbfs-on-sparc.diff (merged upstream).
  * Remove patch: 20-update-gpu-pitch.diff (merged upstream).

 -- Cyril Brulebois <kibi@debian.org>  Fri, 25 Feb 2011 12:37:33 +0100

xorg-server (2:1.9.99.902-3) experimental; urgency=low

  * Merge from master up to 93a7399370.
  * New patch: 17-fix-ftbfs-on-sparc.diff; let's try it for real before
    asking for its being merged upstream.
  * Refresh all patches.

 -- Cyril Brulebois <kibi@debian.org>  Wed, 23 Feb 2011 13:36:13 +0100

xorg-server (2:1.9.99.902-2) experimental; urgency=low

  * Bump dependency on x11proto-randr-dev, needed since xorg-server.pc
    pulls a newer randrproto version.
  * Merge from debian-unstable (picking packaging updates from 2:1.9.4-3).
  * Mention some basic checks to perform when updating to a new upstream
    release, in README.source: ABI bumps and SDK_REQUIRED_MODULES updates.
  * Accordingly:
    - Bump the x11proto-xext-dev dependency.
    - Don't bump the x11proto-kb-dev dependency (even etch had a
      sufficient version).

 -- Cyril Brulebois <kibi@debian.org>  Sun, 20 Feb 2011 07:02:20 +0100

xorg-server (2:1.9.99.902-1) experimental; urgency=low

  [ Christopher James Halse Rogers ]
  * New upstream release (1.10 rc1)
  * Drop 16-xaa-fbcomposite-fix-negative-size.diff, the mod macro that this
    patch fixes is no longer used.
  * debian/control:
    - Bump x11proto-randr-dev and x11proto-xext-dev build-deps to 1.3.99 and
      7.1.99 for new XRandR and XSync extension protocols.

  [ Julien Cristau ]
  * Bump serverminver and ABI versions.

  [ Cyril Brulebois ]
  * New upstream release (1.10 rc2).
  * bug script: Report libGL-related diversions.
  * Bump serverminver again, since ABI_XINPUT_VERSION was bumped from 12.0
    to 12.2.
  * Update debian/copyright from upstream COPYING.
  * Add patch to work around out-of-tree issues: 16-oot-build.diff
