@@ -10,7 +10,7 @@ Subject: [PATCH] xfree86: fix build with xv disabled
 
 --- a/hw/xfree86/modes/xf86Crtc.c
 +++ b/hw/xfree86/modes/xf86Crtc.c
-@@ -3133,6 +3133,7 @@ xf86_crtc_box_area(BoxPtr box)
+@@ -3094,6 +3094,7 @@ xf86_crtc_box_area(BoxPtr box)
      return (int) (box->x2 - box->x1) * (int) (box->y2 - box->y1);
  }
  
@@ -18,7 +18,7 @@ Subject: [PATCH] xfree86: fix build with xv disabled
  /*
   * Return the crtc covering 'box'. If two crtcs cover a portion of
   * 'box', then prefer 'desired'. If 'desired' is NULL, then prefer the crtc
-@@ -3221,6 +3222,7 @@ xf86_crtc_clip_video_helper(ScrnInfoPtr
+@@ -3182,6 +3183,7 @@ xf86_crtc_clip_video_helper(ScrnInfoPtr
  
      return ret;
  }
@@ -28,7 +28,7 @@ Subject: [PATCH] xfree86: fix build with xv disabled
  xf86_wrap_crtc_notify (ScreenPtr screen, xf86_crtc_notify_proc_ptr new)
 --- a/hw/xfree86/modes/xf86Crtc.h
 +++ b/hw/xfree86/modes/xf86Crtc.h
-@@ -1037,6 +1037,7 @@ xf86_hide_cursors (ScrnInfoPtr scrn);
+@@ -934,6 +934,7 @@ xf86_hide_cursors (ScrnInfoPtr scrn);
  extern _X_EXPORT void
  xf86_cursors_fini (ScreenPtr screen);
  
@@ -36,7 +36,7 @@ Subject: [PATCH] xfree86: fix build with xv disabled
  /*
   * For overlay video, compute the relevant CRTC and
   * clip video to that.
-@@ -1055,6 +1056,7 @@ xf86_crtc_clip_video_helper(ScrnInfoPtr
+@@ -952,6 +953,7 @@ xf86_crtc_clip_video_helper(ScrnInfoPtr
  			    RegionPtr   reg,
  			    INT32	width,
  			    INT32	height);
